--- a/package.json
+++ b/package.json
@@ -3,14 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.16.0",
+    "@date-io/dayjs": "^2.16.0",
+    "@date-io/jalaali": "^2.16.0",
+    "@date-io/luxon": "^2.16.0",
+    "@date-io/moment": "^2.16.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
+    "@mui/x-date-pickers": "^5.0.4",
+    "@mui/x-date-pickers-pro": "^5.0.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.5",
+    "moment": "^2.29.4",
     "mui-datatables": "^4.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
